force-app/main/default/objects/Atualizacao_de_Projeto__c/Atualizacao_de_Projeto__c.object-meta.xml
<CustomObject>
    <description>Objeto destinado á controle de atualizações de um projeto ( Backlog__c )</description>
    <label>Atualização de Projeto</label>
    <nameField>
        <label>Título da Atualização</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Atualizações de Projeto</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>