force-app/main/default/objects/Atualizacao_de_Projeto__c/fields/Nome_do_metadado__c.field-meta.xml
<CustomField>
    <fullName>Nome_do_metadado__c</fullName>
    <inlineHelpText>Ex: nomeDaClasse.cls | fluxo Pedido - notifica</inlineHelpText>
    <label>Nome do metadado</label>
    <type>TextArea</type>
</CustomField>