force-app/main/default/objects/Atualizacao_de_Projeto__c/fields/Projeto__c.field-meta.xml
<CustomField>
    <fullName>Projeto__c</fullName>
    <label>Projeto</label>
    <referenceTo>Backlog__c</referenceTo>
    <relationshipLabel>Atualizações do Projeto</relationshipLabel>
    <relationshipName>Atualizacoes</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>