force-app/main/default/objects/Atualizacao_de_Projeto__c/fields/Solicitante__c.field-meta.xml
<CustomField>
    <fullName>Solicitante__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Solicitante</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <value>001i00000085QYbAAM</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Atualizações de Projeto (Solicitante)</relationshipLabel>
    <relationshipName>Atualiza_es_de_Projeto</relationshipName>
    <type>Lookup</type>
</CustomField>