force-app/main/default/objects/Atualizacao_de_Projeto__c/fields/Tipo_do_trabalho__c.field-meta.xml
<CustomField>
    <fullName>Tipo_do_trabalho__c</fullName>
    <inlineHelpText>Tipo do trabalho executado</inlineHelpText>
    <label>Tipo do trabalho</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Implementação</fullName>
            </value>
            <value>
                <fullName>Correção</fullName>
            </value>
            <value>
                <fullName>Remoção</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>