force-app/main/default/objects/Atualizacao_de_Projeto__c/fields/Versao__c.field-meta.xml
<CustomField>
    <fullName>Versao__c</fullName>
    <label>Versão</label>
    <length>255</length>
    <type>Text</type>
</CustomField>